tests/sumo/spec/distribution/errors/speedDev_invalid/errors.sumo
Error: Invalid speed distribution when parsing vType 't0' (maximum value 2.00 too small for distribution with mean 3.10 and deviation 0.10)
Quitting (on error).
